# deus-machine

./: -  .env.example  .gitattributes  .gitignore  .lintstagedrc.json  .mcp.json  .mcp.json.example  .npmrc  .prettierignore  .prettierrc  AGENTS.md  AI_CODE_REVIEW_FIXES.md  AI_CODE_REVIEW_RESPONSE.md  APPROACH_FEEDBACK.md  ARCHITECTURE.md  ARCHITECTURE_DEEP_DIVE.md  ARCHITECTURE_MAP.md  BACKEND_CONNECTION_FIXED.md  BACKEND_CRASH_BUG.md  BACKEND_CRASH_BUG_SOLUTION.md  BROWSER_CONSOLE_FIX.md  BROWSER_INTEGRATION.md  BROWSER_TEST_RESULTS.md  BUILD-SUCCESS.md  BUILD_SYSTEM_ANALYSIS.md  CANCELLATION_FEATURE.md  CHAT_REDESIGN.md  CHAT_REFACTOR_PROPOSAL.md  CLAUDE.md  CLEANUP-SUCCESS-100-PERCENT.md  CODE_QUALITY_IMPLEMENTATION.md  CODE_QUALITY_IMPROVEMENTS.md  COLOR_SYSTEM_GUIDE.md  COMPONENTS-LIST.md  COMPONENT_HIERARCHY.md  CONDUCTOR_ARCHITECTURE.md  CONTRIBUTING.md  CRITICAL_FIXES_TODO.md  DEBUG_INSTRUCTIONS.md  DEVELOPMENT.md  (+113 more)
.agents/: settings.json
.agents/agents/: code-reviewer.md  deep-reviewer.md
.agents/commands/: interrogate-eng.md
.claude/agents/: code-reviewer.md  deep-reviewer.md  dev.md
.claude/commands/: interrogate-ux.md
.context/: workspace-status-plan.md
.github/workflows/: deploy.yml  device-use-e2e.yml  release.yml  test.yml
.husky/: pre-commit
.husky/_/: commit-msg  post-commit  pre-push  prepare-commit-msg
.megagoal/prelaunch-hardening/: NOTES.md  ROADMAP.md
.prompts/: add-file-status-indicators.md  redesign-right-panel-terminal.md
.storybook/: main.ts  preview.tsx  theme-sync.tsx
01/1caa7a498b/: metadata.json
01/abc435104e/: metadata.json
03/d9c3a6a331/: metadata.json
04/d93c7cb905/: metadata.json
05/1117d21029/: metadata.json
05/cb5a6c2ee8/: metadata.json
06/223296a1a2/: metadata.json
06/3e7fc6b58f/: metadata.json
06/850d6682fa/: metadata.json
agent-dots/: package.json  tsconfig.json
backend/: ISSUE_REPORT.md  README.md  dev.sh  server.cjs  vitest.config.ts
design/: app.pen  design-system.pen  pencil-shadcn.pen  session.pen  workspace.pen
docs/: aap-host-design.md  aap-v1-design.html  agent-server-communication-refactor.md  auto-updater.md  browser-tools-roadmap.md  browser-tools.md  codebase-audit-2026-05-18.md  deus-json-spec.md  deus-runtime-completion-audit.md  deus-runtime-goal.md  deus-runtime-verification.md  device-use-v2-design.md  hive-json-spec.md  opendevs-json-spec.md  runtime-agent-cli-ownership.md  scroll-anchoring-investigation.md  session-tabs-refactor.md  sidecar-communication-refactor.md  video-use-and-aap-v1.1-design.md  visual-effects-test.html  workspace-tools.md
gateway/: build.ts  config.ts  index.ts  package.json  router.ts  types.ts  vitest.config.ts
resources/: entitlements.mac.plist  entitlements.runtime.plist
scripts/: bump-version.sh  conductor-setup.sh  deus-setup.sh  dev.sh  generate-icons.mjs  hive-setup.sh  opendevs-setup.sh  prepare-agent-clis.mjs  prepare-agent-simulator.mjs  prepare-device-chrome.mjs  prepare-device-use.mjs  prepare-gh-cli.mjs  prune-pencil-cli-binaries.cjs  verify-packaged-agent-clis.cjs
shared/: .gitignore  agent-catalog.ts  agent-events.ts  enums.ts  events.ts  goal-decision.ts  goals.ts  protocol.ts  runtime.ts  schema.ts  session-events.ts
sidecar/: build.ts  event-broadcaster.ts  frontend-client.ts  health.ts  index.ts  protocol.ts  rpc-connection.ts  rpc-schemas.ts  tsconfig.json  vitest.config.ts
src/: App.css  App.tsx  Dashboard.tsx  Settings.css  Settings.tsx  Terminal.tsx  TerminalPanel.css  TerminalPanel.tsx  WorkspaceChatPanel.tsx  WorkspaceDetail.css  WorkspaceDetail.tsx  fonts.css  global.css  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  DYNAMIC_PORT_IMPLEMENTATION.md  tauri.conf.json
src-tauri/.claude/agent-memory/code-reviewer/: MEMORY.md
src-tauri/capabilities/: default.json
src-tauri/crates/sim-core/: Cargo.toml
src-tauri/crates/sim-core/src/: app_manager.rs  error.rs  input.rs  lib.rs  manager.rs  mjpeg_server.rs  screen_capture.rs  types.rs
src-tauri/crates/sim-sys/: Cargo.toml  build.rs
src-tauri/crates/sim-sys/objc/: sim_bridge.h  sim_bridge.m  sim_bridge_internal.h  sim_encoding.m  sim_framework.m  sim_input.m  sim_screen.m
src-tauri/crates/sim-sys/src/: lib.rs
src-tauri/sidecar/: index.bundled.cjs  index.cjs
src-tauri/src/: auth.rs  backend.rs  browser.rs  commands.rs  db.rs  files.rs  gateway.rs  git.rs  git_service.rs  lib.rs  main.rs  pty.rs  sidecar.rs  socket.rs  watcher.rs
src-tauri/src/commands/: apps.rs  auth.rs  backend.rs  browser.rs  cookies.rs  db.rs  files.rs  gateway.rs  git.rs  mod.rs  onboarding.rs  pty.rs  simulator.rs  socket.rs  watcher.rs  webview.rs
test/: vitest.config.ts
tests/: E2E-TEST-RESULTS.md  README.md  e2e-flow.test.cjs  test-page.html  test-selector.html
(+4180 files in other folders)
