[package]
name = "conductor"
version = "2.0.0"
description = "AI-powered development environment with Claude Code integration"
authors = ["Conductor Team"]
edition = "2021"

[lib]
name = "conductor_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "conductor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["config-toml", "protocol-asset", "devtools", "macos-private-api"] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-notification = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-deep-link = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
anyhow = "1"
thiserror = "2"
portable-pty = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
