[package]
name = "opendevs"
version = "2.0.0"
description = "AI-powered development environment with Claude Code integration"
authors = ["OpenDevs Team"]
edition = "2021"

[lib]
name = "opendevs_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "opendevs"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "=2.4.1", features = [] }

[dependencies]
tauri = { version = "=2.8.5", features = ["config-toml", "protocol-asset", "devtools", "macos-private-api", "unstable"] }
url = "2"
tauri-plugin-fs = "=2.4.2"
tauri-plugin-dialog = "=2.4.0"
tauri-plugin-shell = "=2.3.1"
tauri-plugin-http = "=2.5.2"
tauri-plugin-notification = "=2.3.1"
tauri-plugin-updater = "=2.9.0"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "=2.4.3"
tauri-plugin-window-state = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
portable-pty = "0.8"
ignore = "0.4"
walkdir = "2.5"
glob = "0.3"
chrono = "0.4"
parking_lot = "0.12"
lazy_static = "1.4"
notify = "8.1"
git2 = "0.19"
libc = "0.2"
# Cookie sync: read browser cookie DBs + decrypt
rusqlite = { version = "0.31", features = ["bundled"] }
aes = "0.8"
cbc = "0.1"
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha1 = "0.10"
hmac = "0.12"
time = "0.3"
# Native screenshot support (macOS WKWebView.takeSnapshot)
base64 = "0.22"
# Fuzzy file search (Codex-style @ mentions)
nucleo-matcher = "0.3"
# Fast byte-level newline counting for git diff stats
bytecount = "0.6"
# Error monitoring
sentry = "0.46"
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"
# iOS Simulator integration (screen capture, MJPEG streaming, HID input)
opendevs-sim-core = { path = "crates/sim-core" }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
