[package]
name = "hive-sim-core"
version = "0.1.0"
edition = "2021"

[dependencies]
hive-sim-sys = { path = "../sim-sys" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
bytes = "1"
async-stream = "0.3"
log = "0.4"
thiserror = "2"
